@@ -228,6 +228,7 @@
                     <argLine>
                         --add-modules java.xml.bind
                         --upgrade-module-path ${endorsed.dir}
+                        -Djdk.attach.allowAttachSelf
                     </argLine>
                 </configuration>
             </plugin>
