@@ -250,7 +250,9 @@
                             <argLine>
                                 --add-reads java.base=java.desktop
                                 --add-modules java.xml.bind
-                                --upgrade-module-path ${endorsed.dir}</argLine>
+                                --upgrade-module-path ${endorsed.dir}
+                                -Djdk.attach.allowAttachSelf
+                           </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
